example/error/err_2.pas

Program example(input, output) ;

Var a, b : integer,
           Begin
             a  := 20.5 ;
             b  := 15 ;
             For a := 0 To 10.5 Do
               b := a
                    Write(a */ b)
           End.
